# TriFrameBlog

./: .gitignore  LICENSE.md  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
django_blog/: Dockerfile  Dockerfile.dev  README.md  StartLocalDev.ps1  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start-local-dev.sh
django_blog/accounts/: admin.py  apps.py  forms.py  managers.py  models.py  seeders.py  tests.py  urls.py  views.py
django_blog/accounts/management/commands/: create_superuser.py
django_blog/accounts/migrations/: 0001_initial.py  0002_remove_emailuser_first_name_and_more.py
django_blog/accounts/templates/accounts/: profile.html
django_blog/accounts/templates/registration/: login.html  register.html
django_blog/blogs/: admin.py  apps.py  forms.py  managers.py  models.py  seeders.py  tests.py  urls.py  views.py
django_blog/blogs/migrations/: 0001_initial.py  0002_tag_slug.py  0003_alter_blogpost_options_alter_blogpost_image.py
django_blog/blogs/templates/blogs/: blogs.html  create.html  delete.html  detail.html  edit.html  index.html  my_blogs.html
django_blog/blogs/templates/blogs/components/: blog_card.html  blog_form.html  blog_list.html  blog_pagination.html
django_blog/django_blog/: settings.py  urls.py
django_blog/django_blog/settings/: __init__.py  base.py  development.py  production.py  testing.py
django_blog/nginx/: nginx.conf
django_blog/templates/: base.html
django_blog/templates/components/: footer.html  navbar.html
docs/: er-diagram.puml  triframeblog_wireframes.excalidraw
fastapi_blog/: Dockerfile  Dockerfile.dev  README.md  StartLocalDev.ps1  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start-local-dev.sh
fastapi_blog/alembic/: env.py
fastapi_blog/alembic/versions/: 11ac559f37f9_update_user.py  6b23a2874bc4_initial_migration.py
fastapi_blog/fastapi_blog/: admin.py  auth.py  config.py  database.py  forms.py  main.py  middleware.py  schemas.py  templating.py
fastapi_blog/fastapi_blog/accounts/: admin.py  exceptions.py  forms.py  models.py  routes.py  schemas.py
fastapi_blog/fastapi_blog/accounts/templates/: login.html  profile.html  register.html
fastapi_blog/fastapi_blog/blogs/: admin.py  forms.py  models.py  routes.py  schemas.py
fastapi_blog/fastapi_blog/blogs/templates/: blogs.html  create.html  delete.html  edit.html  index.html  my_blogs.html
fastapi_blog/fastapi_blog/blogs/templates/components/: blog_card.html  blog_form.html  blog_pagination.html
fastapi_blog/fastapi_blog/repositories/: blog_post_repository.py  email_user_repository.py  tag_repository.py
fastapi_blog/fastapi_blog/services/: blog_post_service.py  email_user_service.py  tag_service.py
fastapi_blog/fastapi_blog/templates/: 403.html  404.html  base.html
fastapi_blog/fastapi_blog/templates/components/: navbar.html
fastapi_blog/fastapi_blog/utils/: create_superuser.py  seed.py
fastapi_blog/fastapi_blog/utils/seeds/: blog_post_seed.py  email_user_seed.py  tag_seed.py
fastapi_blog/nginx/: nginx.conf
fastapi_blog/tests/: conftest.py  test_data.py  test_utils.py
fastapi_blog/tests/integration/: test_accounts_routes.py  test_blogs_routes.py
fastapi_blog/tests/unit/: test_blog_post_service.py  test_email_user_service.py  test_tag_service.py
flask_blog/: Dockerfile  Dockerfile.dev  README.md  StartLocalDev.ps1  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  start-local-dev.sh
flask_blog/flask_blog/: __init__.py  admin.py  config.py  container.py  extensions.py
flask_blog/flask_blog/accounts/: admin.py  commands.py  forms.py  models.py  views.py
flask_blog/flask_blog/accounts/templates/: login.html  profile.html
flask_blog/flask_blog/accounts/templates/accounts/: login.html  register.html
flask_blog/flask_blog/blogs/: __init__.py  admin.py  exceptions.py  forms.py  models.py  routes.py  views.py
flask_blog/flask_blog/blogs/templates/: blogs.html  create.html  delete.html  detail.html  edit.html  index.html  my_blogs.html
flask_blog/flask_blog/blogs/templates/components/: blog_card.html  blog_form.html  blog_list.html  blog_pagination.html
flask_blog/flask_blog/repositories/: blog_post_repository.py  email_user_repository.py  tag_repository.py
flask_blog/flask_blog/services/: blog_post_service.py  email_user_service.py  tag_service.py
flask_blog/flask_blog/templates/: base.html
flask_blog/flask_blog/templates/admin/: index.html
flask_blog/flask_blog/templates/components/: navbar.html
flask_blog/migrations/versions/: 92357b8b5757_email_user_model.py  cc7e6008e23f_tag_blog_models.py
flask_blog/nginx/: nginx.conf
flask_blog/seeds/: blog_post_seeder.py  email_user_seeder.py  tag_seeder.py
flask_blog/tests/: conftest.py  test_accounts_views.py  test_blog_post_service.py  test_blog_views.py  test_blogs_views.py  test_email_user_service.py
flask_blog/tests/integration/: test_accounts_views.py
flask_blog/tests/unit/: test_blog_post_service.py  test_email_user_service.py  test_tag_service.py
shared/: pyproject.toml
shared/shared/services/: blog_post_service.py  email_user_service.py
shared/static/css/: tailwind.css
shared/static/js/blog/: base.js  blogs.js  form.js
shared/styles/: tailwind.css
shared/tests/: test_tag_service.py
