[project]
name = "django-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomáš Štucka",email = "Tomas00217@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-stubs-ext (>=5.1.3,<6.0.0)",
    "django-types (>=0.20.0,<0.21.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "djlint (>=1.36.4,<2.0.0)",
    "cloudinary (>=1.42.2,<2.0.0)",
    "django-cloudinary-storage (>=0.3.0,<0.4.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "html-sanitizer (>=2.5.0,<3.0.0)",
    "django-seeding (>=1.3.6,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "faker (>=37.1.0,<38.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
