[project]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomáš Štucka",email = "Tomas00217@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "slugify (>=0.0.1,<0.0.2)",
    "alembic (>=1.15.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
