[project]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomáš Štucka",email = "Tomas00217@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "cloudinary (>=1.42.2,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "fastapi-login (>=1.10.3,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
    "starlette-wtf (>=0.4.5,<0.5.0)",
    "starlette-admin (>=0.14.1,<0.15.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "html-sanitizer (>=2.5.0,<3.0.0)",
    "faker (>=37.1.0,<38.0.0)",
    "bcrypt (<4.1.0)",
    "h11 (>=0.16.0,<0.17.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
