[project]
name = "flask-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomáš Štucka",email = "Tomas00217@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "flask-admin (>=1.6.1,<2.0.0)",
    "wtforms (==3.1.2)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-flask (>=1.3.0,<2.0.0)",
    "cloudinary (>=1.42.2,<2.0.0)",
    "html-sanitizer (>=2.5.0,<3.0.0)",
    "flask-seeder (>=1.2.0,<2.0.0)",
    "setuptools (>=80.1.0,<81.0.0)",
    "faker (>=37.1.0,<38.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
