[project]
name = "shared"
version = "0.1.0"
description = "Common functionality for TriFrameBlog"
authors = [
    {name = "Tomáš Štucka",email = "Tomas00217@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary (>=1.42.2,<2.0.0)",
    "bleach (>=6.2.0,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
